--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,8 +37,8 @@ jobs:
       - name: Upload Pages Artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          artifact_name: pages
-          artifact_path: ./site/dist
+          name: github-pages
+          path: site/dist
 
   deploy:
     needs: build
