--- a/site/package.json
+++ b/site/package.json
@@ -9,12 +9,16 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/tailwind": "^5.1.4",
     "astro": "^5.1.7",
     "gray-matter": "^4.0.3",
+    "marked": "^15.0.6",
     "reading-time": "^1.5.0",
+    "tailwindcss": "^3.4.17",
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.10.7"
   }
 }
