--- a/site/package.json
+++ b/site/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.1.4",
     "astro": "^5.1.7",
+    "figlet": "^1.8.0",
     "gray-matter": "^4.0.3",
     "marked": "^15.0.6",
     "reading-time": "^1.5.0",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
+    "@types/figlet": "^1.7.0",
     "@types/node": "^22.10.7"
   }
 }
