--- a/site/package.json
+++ b/site/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@types/figlet": "^1.7.0",
-    "@types/node": "^22.10.7"
+    "@types/node": "^22.10.7",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
